# infraweave

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build_image.sh  deny.toml  mkdocs.yml  overview.drawio  readme.md  setup.py  test-input.json  test-input2.json
apps/cli/: Cargo.toml  claim_s3complex.yaml  module_azurefunction.yaml  module_iamrole.yaml  module_s3bucket.yaml  module_storageaccount.yaml
apps/cli/src/: aws.rs  main.rs  module.rs
apps/environments/aws/: Cargo.toml
apps/environments/azure/: Cargo.toml
apps/infrabridge_operator/: Cargo.toml
apps/infrabridge_operator/e2e-tests/: test_aws_eks.sh
apps/infrabridge_operator/infrabridge-helm/: Chart.yaml
apps/infrabridge_operator/manifests/: crd_module.yaml  crd_s3.yaml  kind_s3.yaml  module_s3.yaml
apps/infrabridge_operator/src/: apply.rs  aws.rs  (+11 more)
cli/: Cargo.toml  Dockerfile  README.md  bake.hcl  build.rs  claim_bucketcollection.yaml  claim_s3.yaml  claim_s3complex.yaml  module_azurefunction.yaml  module_iamrole.yaml  module_s3bucket.yaml  module_storageaccount.yaml
cli/src/: defs.rs  lib.rs  main.rs  plan.rs  run.rs  utils.rs
crd-templator/: Cargo.toml  README.md
crd-templator/src/: generate.rs  lib.rs  main.rs  read.rs
crd-templator/templates/: module_crd_template.yaml
defs/: Cargo.toml  README.md
defs/src/: api.rs  cloudprovider.rs  deployment.rs  errors.rs  event.rs  events.rs  gitprovider.rs  hcl.rs  infra.rs  infra_change_record.rs  lib.rs  log.rs  main.rs  module.rs  module_test.rs  notification.rs  oci.rs  policy.rs  provider.rs  publish_job.rs  resource_change.rs  resource_change_filter.rs  schema_test.rs  stack.rs  tfoutput.rs  tfprovider.rs  tfvariable.rs  tfvariable_test.rs
env_aws/: Cargo.toml  README.md
env_aws/src/: api.rs  api_change_records.rs  api_deployments.rs  api_event.rs  api_infra-new.rs  api_infra.rs  api_module.rs  api_policy.rs  api_resources.rs  api_stack.rs  api_status.rs  backend.rs  bootstrap.rs  direct_impl.rs  http_client.rs  job_id.rs  lib.rs  provider.rs  utils.rs
env_aws_direct/: Cargo.toml  README.md
env_aws_direct/src/: api.rs  backend.rs  central_creds.rs  direct_impl.rs  http_auth.rs  job_id.rs  lib.rs  local_bootstrap.rs  provider.rs  utils.rs
env_azure/: Cargo.toml
env_azure/src/: api.rs  api_infra.rs  api_module.rs  api_status.rs  backend.rs  bootstrap.rs  custom.rs  environment.rs  http_auth.rs  job_id.rs  lib.rs  provider.rs  sas.rs  utils.rs
env_azure_direct/: Cargo.toml  README.md
env_azure_direct/src/: api.rs  backend.rs  provider.rs  utils.rs
env_common/: Cargo.toml  README.md
env_common/src/: deployment_status_handler.rs  errors.rs  handlers.rs  http_auth.rs  lib.rs  main.rs
gitops/: Cargo.toml  Dockerfile.generic  Dockerfile.generic.debian  Dockerfile.lambda  Dockerfile.lambda.debian  README.md  bake.hcl
gitops/src/: defs.rs  diff.rs  git_utils.rs  github.rs  gitops.rs  lib.rs  main.rs  project.rs  secret.rs
graph/: .gitignore  Cargo.toml
graph/src/: lib.rs
graph/tests/: integration_test.rs
http_client/: Cargo.toml
http_client/src/: client.rs  http_auth.rs  lib.rs
infraweave-chat/: Cargo.toml  Dockerfile.lambda  README.md
infraweave-chat/src/: agent.rs  handler.rs  lib.rs  main.rs  system_prompt.rs
infraweave-mcp/: Cargo.toml  README.md
infraweave-mcp/src/: lib.rs  main.rs
infraweave-tools/: Cargo.toml  README.md
infraweave-tools/src/: client.rs  context.rs  lib.rs  tool.rs
infraweave_py/: Cargo.toml  README.md  build.rs  pyproject.toml  setup.py  test.py
infraweave_py/infraweave_py/: __init__.py
infraweave_py/src/: deployment.rs  lib.rs  module.rs  python.rs  stack.rs  utils.rs
integration-tests/: Cargo.toml  README.md
integration-tests/azure-function-code/: bootstrap.py  function_app.py  requirements.txt
integration-tests/claims/: bucketcollection-stack-vars-claim.yaml  eks-claim.yaml  s3bucket-dev-claim-snake_case.yaml  s3bucket-dev-claim.yaml  s3bucket-oci-claim.yaml  s3bucket-stable-claim.yaml  test-nullable-claim.yaml
integration-tests/lambda-code/: bootstrap.py  test-api.py
integration-tests/src/: scaffold.rs
integration-tests/tests/: cli_http.rs  infra.rs  module.rs  operator.rs  provider.rs  runner.rs  runner_oci.rs  stack.rs  utils.rs
internal-api/: .env  Cargo.toml  Dockerfile.azure  Dockerfile.azure.debian  Dockerfile.lambda  Dockerfile.lambda.debian  README.md  bake.hcl
internal-api/src/: api_common.rs  auth_handler.rs  auth_handler_tests.rs  aws_handlers.rs  azure_handlers.rs  common.rs  handlers.rs  http_router.rs  lib.rs  local_setup.rs  main.rs  main_aws_unified.rs  main_azure_unified.rs  main_local_http.rs  otel_tracing.rs  queries.rs
operator/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.debian  README.md  bake.hcl
operator/e2e-tests/: test_aws_eks.sh
operator/infraweave-helm/: Chart.yaml  values.yaml
operator/src/: apply.rs  crd.rs  defs.rs  finalizer.rs  kind.rs  lib.rs  logging.rs  main.rs  operator.rs  patch.rs  status.rs  utils.rs  validation.rs  webhook.rs
reconciler/: Cargo.toml  Dockerfile.generic  Dockerfile.generic.debian  Dockerfile.lambda  Dockerfile.lambda.debian  README.md  bake.hcl
reconciler/src/: main.rs
terraform_runner/: Cargo.toml  Dockerfile  Dockerfile.terraform  Dockerfile.terraform.alpine  Dockerfile.tofu  Dockerfile.tofu.alpine  README.md  bake.hcl
terraform_runner/src/: cmd.rs  deployment.rs  deployment_status_handler.rs  job_id.rs  lib.rs  main.rs  module.rs  opa.rs  read.rs  runner.rs  terraform.rs  utils.rs  webhook.rs
utils/: Cargo.toml  README.md
utils/src/: config_path.rs  deployment.rs  dir.rs  file.rs  general.rs  json.rs  lib.rs  log.rs  logging.rs  module.rs  module_diff.rs  oci.rs  otel_tracing.rs  provider_util.rs  schema_validation.rs  stack.rs  string_utils.rs  tar.rs  terraform.rs  time.rs  variables.rs  versioning.rs
webserver-openapi/: Cargo.toml  Dockerfile  Dockerfile.debian  bake.hcl  readme.md
webserver-openapi/src/: auth.rs  handlers.rs  lib.rs  main.rs  server.rs  structs.rs
(+529 files in other folders)
