[workspace]
resolver = "2"
members = [
    "cli",
    "crd-templator",
    "defs",
    "env_aws",
    "env_aws_direct",
    "env_azure",
    "env_azure_direct",
    "env_common",
    "http_client",
    "gitops",
    "infraweave_py",
    "infraweave-mcp",
    "internal-api",
    "operator",
    "prometheus_exporter",
    "reconciler",
    "terraform_runner",
    "utils",
    "webserver-openapi",
    "integration-tests",
    "graph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

[workspace.dependencies]
testcontainers = "0.27.3"
testcontainers-modules = "0.15.0"
bollard = "0.20.1"
mockall = "0.13"
pretty_assertions = "1.4.1"

[profile.ci-tests]
inherits = "test"
debug = 1
incremental = false
opt-level = 1
split-debuginfo = "packed"
