[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
prettytable = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
serde_yaml = "0.8"
log = "0.4"
ring = "0.17.12"
openssl = { version = "0.10", features = ["vendored"] }
hostname = "0.4"
ratatui = "0.28"
crossterm = "0.28"
arboard = "3.4"

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
gitops = { path = "../gitops" }
