[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1"
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
colored = "2.0"
prettytable = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
ring = "0.17.12"
base64 = { workspace = true }
hostname = "0.4"
ratatui = "0.28"
crossterm = "0.28"
arboard = "3.4"
self_update = "0.42"
semver = { workspace = true }
dirs = { workspace = true }
inquire = "0.9"
webbrowser = "1.0"

rand = { workspace = true }
url = "2.5"

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
http_client = { path = "../http_client" }
gitops = { path = "../gitops" }
infraweave-mcp = { path = "../infraweave-mcp" }
