[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
colored = "2.0"
prettytable = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
serde_yaml = "0.8"
log = "0.4"
ring = "0.17.12"
base64 = "0.22"
hostname = "0.4"
ratatui = "0.28"
crossterm = "0.28"
arboard = "3.4"
self_update = "0.42"
semver = "1.0"
dirs = "5.0"
inquire = "0.9"
webbrowser = "1.0"

rand = "0.8"
url = "2.5"

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
http_client = { path = "../http_client" }
gitops = { path = "../gitops" }
infraweave-mcp = { path = "../infraweave-mcp" }
