[package]
name = "crd_templator"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tera = "1.15.0"
tokio = { version = "1", features = ["full"] }
serde_json = "*"

env_defs = { path = "../defs" }

[lib]
name = "crd_templator"
path = "src/lib.rs"
