[package]
name = "crd_templator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde_yaml = "0.8"
tera = "1.15.0"
tokio = { version = "1", features = ["full"] }

env_defs = { path = "../defs" }

[lib]
name = "crd_templator"
path = "src/lib.rs"
