[package]
name = "crd_templator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde_yaml = { workspace = true }
tera = "1.15.0"
tokio = { workspace = true, features = ["full"] }

env_defs = { path = "../defs" }

[lib]
name = "crd_templator"
path = "src/lib.rs"
