[package]
name = "env_defs"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
utoipa = { version = "5.2.0", features = ["axum_extras"], optional = true }

[features]
default = []
openapi = ["utoipa"]
