[package]
name = "env_defs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.cargo-machete]
ignored = ["hcl-rs"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
utoipa = { version = "5.2.0", features = ["axum_extras"], optional = true }
hcl-rs = { workspace = true }

[features]
default = []
openapi = ["utoipa"]
