[package]
name = "env_aws"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1.50"
aws-config.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-sdk-s3.workspace = true
serde_json = "1.0"
serde_yaml = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "0.6.6"
reqwest = "0.11"
tempfile = "3.10.1"
rand = "0.8.5"
base64 = "0.22"
regex = "1.11.0"
hcl-rs = "0.18.4"

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
test-mode = []
