[package]
name = "env_aws"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
aws-config.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-sts.workspace = true
aws-sdk-s3.workspace = true
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
reqwest = { workspace = true }

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
test-mode = []
