[package]
name = "env_aws_direct"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1.50"
aws-config.workspace = true
aws-credential-types = "1.2"
aws-sdk-cloudwatchlogs.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ecs.workspace = true
aws-sdk-lambda.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-sdk-s3.workspace = true
aws-sigv4 = "1.2"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
http = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "0.6.6"
tempfile = "3.10.1"
rand = "0.8.5"
base64 = "0.22"
regex = "1.11.0"
hcl-rs = "0.18.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["gzip"] }

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = "1.4.1"
