[package]
name = "env_aws_direct"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
aws-config.workspace = true
aws-credential-types = "1.2"
aws-sdk-cloudwatchlogs.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-ecs.workspace = true
aws-sdk-sns.workspace = true
aws-sdk-ssm.workspace = true
aws-sdk-sts.workspace = true
aws-sdk-s3.workspace = true
aws-sigv4 = "1.2"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", features = ["gzip"] }

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = { workspace = true }
