[package]
name = "env_azure"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[dependencies]
async-trait = "0.1.50"
azure_identity = "0.30"
azure_core = "0.30"
azure_storage = "0.21"
azure_storage_blob = "0.7"
serde_json = "1.0"
serde_yaml = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[features]
test-mode = []
