[package]
name = "env_azure_direct"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
azure_identity = { workspace = true }
azure_core = { workspace = true }
azure_storage_blob = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }

env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[features]
test-mode = []
