[package]
name = "env_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
serde_json = "1.0"

env_aws = { path = "../env_aws" }
env_azure = { path = "../env_azure" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
