[package]
name = "env_common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.13"
hcl-rs = "0.16.9"
regex = "1.11.0"
once_cell = "1.20.2"
humantime = "2.1"
thiserror = "1.0.68"

env_aws = { path = "../env_aws" }
env_azure = { path = "../env_azure" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = "1.4.1"
