[package]
name = "env_common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { version = "1" }
log = { workspace = true }
base64 = { workspace = true }
hcl-rs = { workspace = true }
regex = { workspace = true }
once_cell = "1.20.2"
humantime = "2.1"
thiserror = { workspace = true }
indexmap = "2.7.0"
oci-client = "0.15.0"
reqwest = { workspace = true }
uuid = { workspace = true }

env_aws = { path = "../env_aws" }
env_aws_direct = { path = "../env_aws_direct" }
env_azure = { path = "../env_azure" }
env_azure_direct = { path = "../env_azure_direct" }
env_defs = { path = "../defs" }
http_client = { path = "../http_client" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = { workspace = true }
mockall = { workspace = true }
