[package]
name = "gitops"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
openssl = { workspace = true }
lambda_runtime = { workspace = true }
aws_lambda_events = "0.16"
futures = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
subtle = "2.4"
hex = "0.4"
chrono = { workspace = true }
regex = { workspace = true }

# AWS SDK
aws-sdk-ssm = "1.67.0"
aws-config = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
name = "gitops"
path = "src/lib.rs"
