[package]
name = "gitops"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
lambda_runtime = { workspace = true }
aws_lambda_events = "0.16"
futures = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = "10.3.0"
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = "2.4"
hex = "0.4"
chrono = { workspace = true }
regex = { workspace = true }

# AWS SDK
aws-sdk-ssm.workspace = true
aws-config.workspace = true

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
name = "gitops"
path = "src/lib.rs"
