[package]
name = "graph"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.24.0"
