[package]
name = "http_client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1" }
uuid = { version = "1.0", features = ["v4"] }

env_aws_direct = { path = "../env_aws_direct" }
env_azure_direct = { path = "../env_azure_direct" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
