[package]
name = "http_client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

env_aws_direct = { path = "../env_aws_direct" }
env_azure_direct = { path = "../env_azure_direct" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
