[package]
name = "infraweave-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["bedrock"]
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
infraweave-tools = { path = "../infraweave-tools" }

# Bedrock backend (default)
aws-config = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { version = "1.95", default-features = false, features = ["rt-tokio", "default-https-client"], optional = true }
aws-smithy-types = { version = "1", optional = true }

[[bin]]
name = "infraweave-chat"
path = "src/main.rs"
