[package]
name = "infraweave-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["bedrock"]
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
infraweave-tools = { path = "../infraweave-tools" }

# Bedrock backend (default)
aws-config = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { version = "1.95", default-features = false, features = ["rt-tokio", "default-https-client"], optional = true }
aws-smithy-types = { version = "1", optional = true }

[[bin]]
name = "infraweave-chat"
path = "src/main.rs"
