[package]
name = "infraweave-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "infraweave-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.6.0", features = ["transport-io"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
infraweave-tools = { path = "../infraweave-tools" }
env_utils = { path = "../utils" }
