[package]
name = "infraweave-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
diffy = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde_json = { workspace = true }
env_defs = { path = "../defs" }
semver = { workspace = true }
zip = { workspace = true }
