[package]
name = "infraweave-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
diffy = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde_json = "1.0"
env_defs = { path = "../defs" }
semver = "1.0"
zip = "0.6.6"
