[package]
name = "infraweave_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.31"
pyo3 = { version = "0.18.0", features = ["extension-module"] }

[lib]
name = "infraweave_py"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Minimize executable size 10MB (currently container => 50 -> 40), maybe try scratch?
# [profile.release]
# lto = true
# opt-level = "z"
# panic = "abort"