[package]
name = "infraweave_py"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "0.24.1", features = ["extension-module"] }

env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
name = "infraweave"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.maturin]
module-name = "infraweave"

[features]
default = []
with_py = []
