[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project]
name = "infraweave"
version = "0.0.1rc4"
description = "Implement InfraWeave in Python"
readme = "README.md"
authors = [
    {name = "InfraWeave Team", email = "opensource@infraweave.com"}
]
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
]

[tool.setuptools]
packages = ["infraweave"]
