[build-system]
requires = ["maturin==1.7.5"]
build-backend = "maturin"

[project]
name = "infraweave"
version = "0.0.0+to-be-overriden"
description = "Interact with InfraWeave using Python"
readme = "README.md"
authors = [
    {name = "InfraWeave Team", email = "opensource@infraweave.com"}
]
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
]

[tool.setuptools]
packages = ["infraweave"]

[tool.maturin]
features = ["with_py"]
