[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"

env_defs = { path = "../defs" }
env_aws = { path = "../env_aws" }
env_common = { path = "../env_common" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.8"
testcontainers = { version = "0.23.1",  features = ["blocking"] }
testcontainers-modules = { version = "0.11.4", features = ["dynamodb"] }
