[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "process"] }
serde_json = "1.0"
serde_yaml = "0.8"
hcl-rs = "0.18.4"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
rand = "0.10"
base64 = "0.22"
testcontainers = { workspace = true, features = ["blocking"] }
testcontainers-modules = { workspace = true, features = ["dynamodb", "k3s", "localstack"] }

env_defs = { path = "../defs" }
env_aws = { path = "../env_aws", features = ["test-mode"] }
env_azure = { path = "../env_azure", features = ["test-mode"] }
env_common = { path = "../env_common" }
terraform_runner = { path = "../terraform_runner" }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.0"
env_utils = { path = "../utils" }
http_client = { path = "../http_client" }
internal-api = { path = "../internal-api", features = ["local"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "=0.23.0", features = ["v1_31"] }
kube-runtime = "0.96.0"
rustls = "0.23.18"
dirs = "4.0"
operator = { path = "../operator" }
axum = "0.8.1"
tower = "0.5"
