[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.cargo-machete]
ignored = ["hcl-rs"]

[dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
hcl-rs = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
testcontainers = { workspace = true, features = ["blocking"] }
testcontainers-modules = { workspace = true, features = ["dynamodb", "k3s", "localstack"] }

env_defs = { path = "../defs" }
env_aws = { path = "../env_aws", features = ["test-mode"] }
env_azure = { path = "../env_azure", features = ["test-mode"] }
env_common = { path = "../env_common" }
terraform_runner = { path = "../terraform_runner" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
env_utils = { path = "../utils" }
http_client = { path = "../http_client" }
internal-api = { path = "../internal-api", features = ["local"] }
kube = { workspace = true }
k8s-openapi = { workspace = true }
kube-runtime = { version = "0.96.0" }
rustls = { workspace = true }
dirs = "4.0"
operator = { path = "../operator" }
axum = "0.8.1"
tower = { workspace = true }
