[package]
name = "internal-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["aws"]
aws = ["lambda_http", "lambda_runtime"]
azure = ["azure_core", "azure_identity", "azure_data_cosmos", "azure_storage_blob", "time", "chrono"]
local = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
testcontainers = { workspace =true, optional = true }
testcontainers-modules = { workspace =true, features = ["dynamodb"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils" }
env_aws_direct = { path = "../env_aws_direct" }
env_azure_direct = { path = "../env_azure_direct" }
integration-tests = { path = "../integration-tests" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.31"
base64 = "0.22"
async-trait = "0.1.50"
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }
tokio-util = { version = "0.7", features = ["io"] }
urlencoding = "2.1"
jsonwebtoken = "10.3.0"

# OpenTelemetry dependencies (generic, cloud-agnostic)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"

# AWS dependencies (optional)
lambda_http = { version = "0.13.0", optional = true }
lambda_runtime = { version = "0.13.0", optional = true }

# Azure dependencies (optional) - using latest versions
azure_core = { version = "0.30", optional = true }
azure_identity = { version = "0.30", optional = true }
azure_storage = { version = "0.21", optional = true }
azure_storage_blob = { version = "0.7", optional = true }
azure_data_cosmos = { version = "0.29", optional = true }
chrono = { version = "0.4", optional = true }
time = { version = "0.3", optional = true }
hmac = { version = "0.12", optional = true }
graph = { path = "../graph" }

[lib]
name = "internal_api"
path = "src/lib.rs"

[[bin]]
name = "internal-api-aws-unified"
path = "src/main_aws_unified.rs"
required-features = ["aws"]

[[bin]]
name = "internal-api-azure-unified"
path = "src/main_azure_unified.rs"
required-features = ["azure"]

[[bin]]
name = "internal-api-local"
path = "src/main_local_http.rs"

[[bin]]
name = "internal-api-scaffold"
path = "src/main.rs"
required-features = ["local"]
