[package]
name = "internal-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["aws"]
aws = ["lambda_runtime"]
azure = ["azure_core", "azure_identity", "azure_data_cosmos", "azure_storage_blob"]
local = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, features = ["dynamodb"], optional = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
env_common = { path = "../env_common" }
env_defs = { path = "../defs" }
env_utils = { path = "../utils", features = ["otel"] }
env_aws_direct = { path = "../env_aws_direct" }
env_azure_direct = { path = "../env_azure_direct" }
integration-tests = { path = "../integration-tests" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
reqwest = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = "0.4"
tower-http = { workspace = true, features = ["trace", "cors", "compression-gzip"] }
urlencoding = { workspace = true }

# Tracing macros (`#[instrument]`, `Span`); OTel init lives in env_utils
# behind the `otel` feature.
tracing = "0.1"

# AWS dependencies (optional)
lambda_runtime = { workspace = true, optional = true }

# Azure dependencies (optional) - using latest versions
azure_core = { workspace = true, optional = true }
azure_identity = { workspace = true, optional = true }
azure_storage_blob = { workspace = true, optional = true }
azure_data_cosmos = { version = "0.29", optional = true }
graph = { path = "../graph" }

[lib]
name = "internal_api"
path = "src/lib.rs"

[[bin]]
name = "internal-api-aws-unified"
path = "src/main_aws_unified.rs"
required-features = ["aws"]

[[bin]]
name = "internal-api-azure-unified"
path = "src/main_azure_unified.rs"
required-features = ["azure"]

[[bin]]
name = "internal-api-local"
path = "src/main_local_http.rs"

[[bin]]
name = "internal-api-scaffold"
path = "src/main.rs"
required-features = ["local"]
